tests/machine/x/cpp/group_items_iteration.error
line 9: ../../../tests/machine/x/cpp/group_items_iteration.cpp:9:12: error: ‘g’ was not declared in this scope
    9 |   decltype(g.key) tag;
      |            ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:9:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_items_iteration.cpp:10:12: error: ‘total’ was not declared in this scope
   10 |   decltype(total) total;
      |            ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:10:12: error: ‘total’ was not declared in this scope
../../../tests/machine/x/cpp/group_items_iteration.cpp:24:1: error: ‘a’ does not name a type
   24 | a.key == b.key &&a.items == b.items;
      | ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:25:1: error: expected declaration before ‘}’ token
   25 | }
      | ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:26:30: error: ‘__struct2’ does not name a type; did you mean ‘__struct3’?
   26 | inline bool operator!=(const __struct2 &a, const __struct2 &b) {
      |                              ^~~~~~~~~
      |                              __struct3
../../../tests/machine/x/cpp/group_items_iteration.cpp:26:50: error: ‘__struct2’ does not name a type; did you mean ‘__struct3’?
   26 | inline bool operator!=(const __struct2 &a, const __struct2 &b) {
      |                                                  ^~~~~~~~~
      |                                                  __struct3
../../../tests/machine/x/cpp/group_items_iteration.cpp:26:13: error: ‘bool operator!=(const int&, const int&)’ must have an argument of class or enumerated type
   26 | inline bool operator!=(const __struct2 &a, const __struct2 &b) {
      |             ^~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:30:16: error: redefinition of ‘template<class T, class U> std::vector<T> __append(const std::vector<T>&, const U&)’
   30 | std::vector<T> __append(const std::vector<T> &v, const U &x) {
      |                ^~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:19:16: note: ‘template<class T, class U> std::vector<T> __append(const std::vector<T>&, const U&)’ previously declared here
   19 | std::vector<T> __append(const std::vector<T> &v, const U &x) {
      |                ^~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/group_items_iteration.cpp:36:15: error: ‘__struct1’ was not declared in this scope; did you mean ‘__struct3’?
   36 |   std::vector<__struct1> data =
      |               ^~~~~~~~~
      |               __struct3
../../../tests/machine/x/cpp/group_items_iteration.cpp:36:24: error: template argument 1 is invalid
   36 |   std::vector<__struct1> data =
      |                        ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:36:24: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:37:37: error: expected ‘)’ before ‘{’ token
   37 |       std::vector<decltype(__struct1{std::string("a"), 1})>{
      |                           ~         ^
      |                                     )
../../../tests/machine/x/cpp/group_items_iteration.cpp:37:59: error: template argument 1 is invalid
   37 |       std::vector<decltype(__struct1{std::string("a"), 1})>{
      |                                                           ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:37:59: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp: In lambda function:
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:23: error: ‘d’ was not declared in this scope
   41 |     std::map<decltype(d.tag), std::vector<__struct1>> __groups;
      |                       ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:43: error: template argument 1 is invalid
   41 |     std::map<decltype(d.tag), std::vector<__struct1>> __groups;
      |                                           ^~~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:43: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:52: error: template argument 1 is invalid
   41 |     std::map<decltype(d.tag), std::vector<__struct1>> __groups;
      |                                                    ^~
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:52: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:52: error: template argument 3 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:41:52: error: template argument 4 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:42:19: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   42 |     for (auto d : data) {
      |                   ^~~~
      |                   std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_items_iteration.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:42:19: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   42 |     for (auto d : data) {
      |                   ^~~~
      |                   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:45:17: error: ‘__struct2’ was not declared in this scope; did you mean ‘__struct3’?
   45 |     std::vector<__struct2> __items;
      |                 ^~~~~~~~~
      |                 __struct3
../../../tests/machine/x/cpp/group_items_iteration.cpp:45:26: error: template argument 1 is invalid
   45 |     std::vector<__struct2> __items;
      |                          ^
../../../tests/machine/x/cpp/group_items_iteration.cpp:45:26: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_items_iteration.cpp:46:21: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   46 |     for (auto &kv : __groups) {
      |                     ^~~~~~~~
      |                     std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:46:21: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   46 |     for (auto &kv : __groups) {
      |                     ^~~~~~~~
      |                     std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:47:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   47 |       __items.push_back(__struct2{kv.first, kv.second});
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:47:34: error: expected ‘)’ before ‘{’ token
   47 |       __items.push_back(__struct2{kv.first, kv.second});
      |                        ~         ^
      |                                  )
../../../tests/machine/x/cpp/group_items_iteration.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/group_items_iteration.cpp:52:17: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   52 |   for (auto g : groups) {
      |                 ^~~~~~
      |                 std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_items_iteration.cpp:52:17: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   52 |   for (auto g : groups) {
      |                 ^~~~~~
      |                 std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~

  8 | struct __struct3 {
  9 |   decltype(g.key) tag;
 10 |   decltype(total) total;
